[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "apscheduler>=3.11.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
orchestrator-ui = "orchestrator.web.app:main"

[tool.pytest.ini_options]
pythonpath = ["."]
